# HDPM097

./: .gitignore  README.md  _config.yml  environment.yml  index.md  report.md  report_NA_edit.md  report_NB_edit.md  requirements.txt
LLM prompts/: arrivals_chatgpt52.md  paper_selection_analysis_opus_4.6.md  scoping_project.ipynb
team_portfolio/: action_plan.md  meeting_1_agenda.md  meeting_1_minutes.md  meeting_2_agenda.md  meeting_2_minutes.md  meeting_3_agenda.md  meeting_3_minutes.md  meeting_4_agenda.md  meeting_4_minutes.md
technical_appendix/Codex/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
technical_appendix/Codex/.matplotlib/: fontlist-v390.json
technical_appendix/Codex/docs/: assumptions.md  environment_setup.md  paper_to_model_spec.md  report_validation_section.md
technical_appendix/Codex/docs/source_text/: Monks_et_al_appendix.md  assignment_brief.md
technical_appendix/Codex/notebooks/: 01_iteration_setup.ipynb  02_iteration_parameters.ipynb  03_iteration_occupancy_audit.ipynb  04_iteration_calibration_and_comparison.ipynb  05_validation_summary.ipynb  06_iteration_more_admissions_validation.ipynb  07_iteration_pooling_validation.ipynb  08_iteration_no_complex_neuro_validation.ipynb  09_iteration_ring_fenced_validation.ipynb  10_final_technical_appendix.html  10_final_technical_appendix.ipynb
technical_appendix/Codex/stroke_sim/: config.py  distributions.py  metrics.py  patients.py  runner.py
technical_appendix/Codex/tests/: conftest.py  test_exclusions.py  test_model_smoke.py  test_patients.py  test_validation_supplementary.py
(+51 files in other folders)
