[project]
name = "stroke-pathway-des"
version = "0.1.0"
description = "Recreation of a hospital stroke pathway DES in Python and SimPy"
requires-python = ">=3.11,<3.14"
dependencies = [
  "simpy==4.1.1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "jupyter>=1.1,<2",
  "pytest>=8.0,<9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
